--- a/Kubernetes_Assignment_3/helm-chart/values.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/values.yaml
@@ -14,7 +14,7 @@ service:
   port: 80
   nodePort: 30007
 
-resources: 
+resources:
   limits:
     cpu: 100m
     memory: 128Mi
@@ -27,6 +27,15 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
+
+ingress:
+  enabled: false
+  annotations: {}
+  hosts:
+    - host: webapp.local
+      paths:
+        - /
+  tls: []
 
 tolerations: []
 
