--- a/Kubernetes_Assignment_3/helm-chart/templates/ingress.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/templates/ingress.yaml
@@ -1,43 +1,24 @@
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "helm-chart.fullname" . }}
+  name: {{ include "simple-webapp.fullname" . }}
   labels:
-    {{- include "helm-chart.labels" . | nindent 4 }}
+    {{- include "simple-webapp.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.className }}
-  ingressClassName: {{ . }}
-  {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            {{- with .pathType }}
-            pathType: {{ . }}
-            {{- end }}
-            backend:
-              service:
-                name: {{ include "helm-chart.fullname" $ }}
-                port:
-                  number: {{ $.Values.service.port }}
-          {{- end }}
-    {{- end }}
+  - host: {{ .Values.ingress.hosts[0].host }}
+    http:
+      paths:
+      - path: {{ .Values.ingress.hosts[0].paths[0] }}
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ include "simple-webapp.fullname" . }}
+            port:
+              number: {{ .Values.service.port }}
 {{- end }}
