--- a/Kubernetes_Assignment_3/helm-chart/templates/serviceaccount.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/templates/serviceaccount.yaml
@@ -1,13 +1,10 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "helm-chart.serviceAccountName" . }}
+  name: {{ include "simple-webapp.serviceAccountName" . }}
   labels:
-    {{- include "helm-chart.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+    app: {{ include "simple-webapp.name" . }}
+{{- if .Values.serviceAccount.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+{{ toYaml .Values.serviceAccount.annotations | indent 4 }}
 {{- end }}
