--- a/Kubernetes_Assignment_3/helm-chart/templates/serviceaccount.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/templates/serviceaccount.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "simple-webapp.serviceAccountName" . }}
+  name: {{ include "helm-chart.serviceAccountName" . }}
   labels:
     app: {{ include "simple-webapp.name" . }}
 {{- if .Values.serviceAccount.annotations }}
