--- a/Kubernetes_Assignment_3/helm-chart/templates/deployment.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/templates/deployment.yaml
@@ -13,7 +13,12 @@ spec:
         app: {{ .Chart.Name }}
     spec:
       containers:
-      - name: webapp
+      - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.port }}
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
