--- a/Kubernetes_Assignment_3/helm-chart/templates/service.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helm-chart.fullname" . }}
-  labels:
-    {{- include "helm-chart.labels" . | nindent 4 }}
+  name: {{ .Chart.Name }}-service
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      targetPort: {{ .Values.service.port }}
+      {{- if eq .Values.service.type "NodePort" }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
   selector:
-    {{- include "helm-chart.selectorLabels" . | nindent 4 }}
+    app: {{ .Chart.Name }}
