--- a/Kubernetes_Assignment_3/helm-chart/templates/service.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/templates/service.yaml
@@ -1,14 +1,12 @@
+{{- if .Values.postgres.enabled }}
 apiVersion: v1
-kind: Service
+kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Chart.Name }}-service
+  name: {{ .Values.postgres.pvc.name }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
-      {{- if eq .Values.service.type "NodePort" }}
-      nodePort: {{ .Values.service.nodePort }}
-      {{- end }}
-  selector:
-    app: {{ .Chart.Name }}
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: {{ .Values.postgres.pvc.size }}
+{{- end }}
