--- a/Kubernetes_Assignment_3/helm-chart/templates/service.yaml
+++ b/Kubernetes_Assignment_3/helm-chart/templates/service.yaml
@@ -1,12 +1,14 @@
-{{- if .Values.postgres.enabled }}
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: Service
 metadata:
-  name: {{ .Values.postgres.pvc.name }}
+  name: {{ .Chart.Name }}-service
 spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: {{ .Values.postgres.pvc.size }}
-{{- end }}
+  type: {{ .Values.service.type }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
+      {{- if eq .Values.service.type "NodePort" }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
+  selector:
+    app: {{ .Chart.Name }}
