--- a/Kubernetes_Assignment_3/service-nodeport.yaml
+++ b/Kubernetes_Assignment_3/service-nodeport.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: simple-webapp-service
+  name: simple-webapp-nodeport  # Changed from webapp-nodeport
 spec:
   type: NodePort
   selector:
@@ -10,4 +10,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30007
+      nodePort: 31000
