--- a/Kubernetes_Assignment_3/service-loadbalancer.yaml
+++ b/Kubernetes_Assignment_3/service-loadbalancer.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: simple-webapp-lb
+  name: simple-webapp-loadbalancer  # Changed from webapp-loadbalancer
 spec:
   type: LoadBalancer
   selector:
