--- a/Prometheus-Grafna-Assignment_5/prom/prometheus-values.yaml
+++ b/Prometheus-Grafna-Assignment_5/prom/prometheus-values.yaml
@@ -14,3 +14,27 @@ prometheus:
         mountPath: /etc/prometheus/scrape_configs
         readOnly: true
 
+grafana:
+  enabled: true
+  grafana.ini:
+    smtp:
+      enabled: true
+      host: "smtp.gmail.com:587"
+      user: "shivanandchouhan959@gmail.com"
+      password: "$__file{/etc/grafana-secrets/smtp-password}"
+      from_address: "shivanandchouhan959@gmail.com"
+      from_name: "Grafana Alerts"
+      skip_verify: false
+      ehlo_identity: "gmail.com"
+      startTLS_policy: "OpportunisticStartTLS"
+  
+  # Remove ALL other SMTP-related configurations
+  extraVolumes:
+    - name: grafana-secrets
+      secret:
+        secretName: grafana-smtp-password
+  
+  extraVolumeMounts:
+    - name: grafana-secrets
+      mountPath: "/etc/grafana-secrets"
+      readOnly: true
