--- a/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
+++ b/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
@@ -7,17 +7,21 @@ pipeline {
     stages {
         stage('SCM Checkout') {
             steps {
-                git 'https://github.com/your-username/hello-springboot-app.git'
+                git 'https://github.com/ShivaChouhan/devops_training.git'
             }
         }
         stage('Build JAR') {
             steps {
-                sh 'mvn clean package'
+                dir('Jenkins_Assignment_7/hello-springboot-app') {
+                    sh 'mvn clean package'
+                }
             }
         }
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER .'
+                dir('Jenkins_Assignment_7/hello-springboot-app') {
+                    sh 'docker build -t shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER .'
+                }
             }
         }
         stage('Login to DockerHub') {
@@ -27,7 +31,9 @@ pipeline {
         }
         stage('Push Image') {
             steps {
-                sh 'docker push shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER'
+                dir('Jenkins_Assignment_7/hello-springboot-app') {
+                    sh 'docker push shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER'
+                }
             }
         }
     }
