--- a/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
+++ b/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
@@ -1,6 +1,6 @@
 // Jenkinsfile for hello-springboot-app
 pipeline {
-    agent any
+    agent java-node
     environment {
         DOCKERHUB_CREDENTIALS = credentials('valaxy-dockerhub')
     }
