--- a/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
+++ b/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
@@ -1,13 +1,13 @@
 // Jenkinsfile for hello-springboot-app
 pipeline {
-    agent java-node
+    agent {label "java-node"}
     environment {
         DOCKERHUB_CREDENTIALS = credentials('shivachouhan-dockerhub')
     }
     stages {
         stage('SCM Checkout') {
             steps {
-                git 'https://github.com/ShivaChouhan/devops_training.git'
+                git branch: 'main', url: 'https://github.com/ShivaChouhan/devops_training.git'
             }
         }
         stage('Build JAR') {
@@ -20,26 +20,26 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 dir('Jenkins_Assignment_7/hello-springboot-app') {
-                    sh 'docker build -t shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER .'
+                    sh 'sudo docker build -t shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER .'
                 }
             }
         }
         stage('Login to DockerHub') {
             steps {
-                sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
+                sh 'echo $DOCKERHUB_CREDENTIALS_PSW | sudo docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
             }
         }
         stage('Push Image') {
             steps {
                 dir('Jenkins_Assignment_7/hello-springboot-app') {
-                    sh 'docker push shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER'
+                    sh 'sudo docker push shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER'
                 }
             }
         }
     }
     post {
         always {
-            sh 'docker logout'
+            sh 'sudo docker logout'
         }
     }
 }
