--- a/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: hello-springboot-app
-        image: shivachouhan/snake-ladder-game:hello-springboot-app
+        image: hello-springboot-app:latest
         ports:
         - containerPort: 8080
 ---
