--- a/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
+++ b/Jenkins_Assignment_7/hello-springboot-app/Jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 dir('Jenkins_Assignment_7/hello-springboot-app') {
+                    echo 'Building Docker Image...'
                     sh 'sudo docker build -t shivachouhan/snake-ladder-game:hello-springboot-app_$BUILD_NUMBER .'
                 }
             }
