Github-Self-Hosted-Runner

--- a/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: hello-springboot-app
         image: hello-springboot-app:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
 ---
