--- a/.github/workflows/java-docker-k8s.yml
+++ b/.github/workflows/java-docker-k8s.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verify Minikube status
+        run: minikube status
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -20,15 +23,27 @@ jobs:
         working-directory: Jenkins_Assignment_7/hello-springboot-app
         run: mvn clean package
 
+      - name: Configure Docker to use Minikube
+        run: eval $(minikube docker-env)
+
       - name: Build Docker image
         working-directory: Jenkins_Assignment_7/hello-springboot-app
-        run: |
-          eval $(minikube docker-env)
-          docker build -t hello-springboot-app:latest .
+        run: docker build -t hello-springboot-app:latest .
+
+      - name: Verify Docker image exists
+        run: docker images | grep hello-springboot-app
 
       - name: Deploy to Minikube
         working-directory: Jenkins_Assignment_7/hello-springboot-app
         run: |
           kubectl apply -f deployment.yaml
+          kubectl get pods -w --timeout=90s
           echo "Service URL:"
           minikube service hello-springboot-app-service --url || true
+
+      - name: Verify deployment
+        run: |
+          kubectl get deployments
+          kubectl describe deployment hello-springboot-app
+          kubectl get pods
+          kubectl describe pod -l app=hello-springboot-app
