--- a/.github/workflows/java-docker-k8s.yml
+++ b/.github/workflows/java-docker-k8s.yml
@@ -37,7 +37,7 @@ jobs:
         working-directory: Jenkins_Assignment_7/hello-springboot-app
         run: |
           kubectl apply -f deployment.yaml
-          kubectl get pods -w --timeout=90s
+          kubectl get pods 
           echo "Service URL:"
           minikube service hello-springboot-app-service --url || true
 
