--- a/.github/workflows/java-docker-k8s.yml
+++ b/.github/workflows/java-docker-k8s.yml
@@ -37,11 +37,11 @@ jobs:
       - name: Verify Docker image exists
         run: docker images | grep hello-springboot-app
 
-      - name: Deploy to Minikube
+      - name: Delete and Recreate Deployment
         working-directory: Jenkins_Assignment_7/hello-springboot-app
         run: |
+          kubectl delete deployment hello-springboot-app || true
           kubectl apply -f deployment.yaml
-          kubectl get pods 
           echo "Service URL:"
           minikube service hello-springboot-app-service --url || true
 
