--- a/.github/workflows/java-docker-k8s.yml
+++ b/.github/workflows/java-docker-k8s.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build Docker image
         working-directory: Jenkins_Assignment_7/hello-springboot-app
-        run: docker build -t hello-springboot-app:latest .
+        run: docker build --no-cache -t hello-springboot-app:latest .
 
       - name: Verify Docker image exists
         run: docker images | grep hello-springboot-app
