--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -5,32 +5,34 @@ phases:
     runtime-versions:
       java: corretto17
     commands:
-      - echo "Installing Maven & Docker"
-      - yum install -y maven docker
+      - echo "Updating APT and installing Maven & Docker"
+      - apt-get update
+      - apt-get install -y maven docker.io
       - service docker start
       - echo "Installing kubectl & configuring EKS cluster"
-      - curl -LO https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl
-      - chmod +x kubectl && mv kubectl /usr/local/bin/
+      - curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      - chmod +x kubectl
+      - mv kubectl /usr/local/bin/
       - aws eks update-kubeconfig --region us-east-1 --name wonderful-rock-potato
 
   pre_build:
     commands:
-      - echo "Login to Amazon ECR (if required)"
-      - $(aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 017373484103.dkr.ecr.us-east-1.amazonaws.com)
+      - echo "Logging in to Amazon ECR"
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 017373484103.dkr.ecr.us-east-1.amazonaws.com
 
   build:
     commands:
-      - echo "Building JAR..."
+      - echo "Building JAR using Maven"
       - mvn clean package
-      - echo "Building Docker image..."
+      - echo "Building Docker image"
       - docker build -t hello-springboot-app .
 
   post_build:
     commands:
-      - echo "Deploying to Kubernetes..."
+      - echo "Deploying to EKS"
       - kubectl apply -f deployment.yaml
       - kubectl get pods
-      - echo "Application deployed."
+      - echo "Application deployed successfully"
 
 artifacts:
   files:
