--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -1,36 +1,60 @@
 version: 0.2
 
+env:
+  variables:
+    AWS_ACCOUNT_ID: "017373484103"
+    AWS_REGION: "us-east-1"
+    ECR_REPOSITORY: "hello-springboot-app"
+    EKS_CLUSTER_NAME: "wonderful-rock-potato"
+
 phases:
   install:
     runtime-versions:
       java: corretto17
     commands:
+      - echo "Installing required packages..."
       - apt-get update -y
       - apt-get install -y maven
+      - echo "Installing kubectl..."
       - curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
       - chmod +x kubectl
       - mv kubectl /usr/local/bin/
 
   pre_build:
     commands:
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 017373484103.dkr.ecr.us-east-1.amazonaws.com
+      - echo "Logging in to Amazon ECR..."
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+      - echo "Creating ECR repository if not exists..."
+      - aws ecr describe-repositories --repository-names $ECR_REPOSITORY || aws ecr create-repository --repository-name $ECR_REPOSITORY
 
   build:
     commands:
-      - echo "Building application"
+      - echo "Building application..."
       - cd Jenkins_Assignment_7/hello-springboot-app
-      - mvn clean package -DskipTests || echo "Build failed"
-      - docker build -t hello-springboot-app . || echo "Docker build failed"
+      - mvn clean package -DskipTests
+      - echo "Building Docker image..."
+      - docker build -t $ECR_REPOSITORY .
 
   post_build:
     commands:
-      - echo "Deploying to EKS"
-      - docker tag hello-springboot-app:latest 017373484103.dkr.ecr.us-east-1.amazonaws.com/hello-springboot-app:latest || echo "Tagging failed"
-      - docker push 017373484103.dkr.ecr.us-east-1.amazonaws.com/hello-springboot-app:latest || echo "Push failed"
-      - aws eks update-kubeconfig --region us-east-1 --name wonderful-rock-potato
-      - kubectl apply -f deployment.yaml || echo "K8s deployment failed"
-      - kubectl get pods
+      - echo "Tagging and pushing Docker image..."
+      - docker tag $ECR_REPOSITORY:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:latest
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:latest
+      - echo "Configuring kubectl..."
+      - aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER_NAME
+      - echo "Deploying to EKS..."
+      - kubectl apply -f deployment.yaml
+      - echo "Verifying deployment..."
+      - kubectl get pods -w --timeout=120s
+      - echo "Getting service URL..."
+      - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
 
 artifacts:
   files:
     - Jenkins_Assignment_7/hello-springboot-app/target/*.jar
+  discard-paths: yes
+
+cache:
+  paths:
+    - '/root/.m2/**/*'
+    - '/var/cache/apt/**/*'
