--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -14,7 +14,7 @@ phases:
     commands:
       - echo "Installing required tools..."
       - apt-get update -y
-      - apt-get install -y maven
+      - apt-get install -y maven docker.io
       - curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
       - chmod +x kubectl
       - mv kubectl /usr/local/bin/
@@ -31,6 +31,7 @@ phases:
   build:
     commands:
       - echo "Building Java application..."
+      - cd Jenkins_Assignment_7/hello-springboot-app
       - mvn clean package
       - echo "Building Docker image..."
       - docker build -t $REPOSITORY_NAME:latest .
@@ -43,6 +44,7 @@ phases:
       - echo "Configuring kubectl..."
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
       - echo "Deploying to EKS..."
+      - cd Jenkins_Assignment_7/hello-springboot-app
       - kubectl apply -f deployment.yaml
       - echo "Verifying deployment..."
       - kubectl rollout status deployment/hello-springboot-app --timeout=300s
@@ -50,7 +52,11 @@ phases:
       - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
       - kubectl get pods
 
+artifacts:
+  files:
+    - Jenkins_Assignment_7/hello-springboot-app/target/*.jar
+
 cache:
   paths:
     - '.m2/**/*'
-    - 'target/**/*'
+    - 'Jenkins_Assignment_7/hello-springboot-app/target/**/*'
