--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -6,6 +6,7 @@ env:
     AWS_REGION: "us-east-1"
     EKS_CLUSTER_NAME: "wonderful-rock-potato"
     MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
+    DOCKER_BUILD_DIR: "Jenkins_Assignment_7/hello-springboot-app"
 
 phases:
   install:
@@ -14,49 +15,53 @@ phases:
     commands:
       - echo "Installing required tools..."
       - apt-get update -y
-      - apt-get install -y maven docker.io
+      - apt-get install -y maven
       - curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
       - chmod +x kubectl
       - mv kubectl /usr/local/bin/
+      - echo "Verifying Docker installation..."
+      - docker --version
 
   pre_build:
     commands:
       - echo "Setting up AWS credentials..."
       - export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+      - echo "Account ID: $AWS_ACCOUNT_ID"
       - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-      - echo "Checking for ECR repository..."
-      - aws ecr describe-repositories --repository-names $REPOSITORY_NAME --region $AWS_REGION || aws ecr create-repository --repository-name $REPOSITORY_NAME --region $AWS_REGION
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com || echo "ECR login failed"
+      - echo "Ensuring ECR repository exists..."
+      - aws ecr describe-repositories --repository-names $REPOSITORY_NAME --region $AWS_REGION || \
+        aws ecr create-repository --repository-name $REPOSITORY_NAME --region $AWS_REGION --image-scanning-configuration scanOnPush=true
 
   build:
     commands:
-      - echo "Building Java application..."
-      - cd Jenkins_Assignment_7/hello-springboot-app
-      - mvn clean package
+      - echo "Building Java application in $DOCKER_BUILD_DIR..."
+      - cd $DOCKER_BUILD_DIR
+      - mvn clean package || echo "Maven build failed"
       - echo "Building Docker image..."
-      - docker build -t $REPOSITORY_NAME:latest .
-      - docker tag $REPOSITORY_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest
+      - docker build -t $REPOSITORY_NAME:latest . || echo "Docker build failed"
+      - docker tag $REPOSITORY_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest || echo "Docker tag failed"
 
   post_build:
     commands:
       - echo "Pushing Docker image to ECR..."
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest || echo "Docker push failed"
       - echo "Configuring kubectl..."
-      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
+      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION || echo "kubeconfig update failed"
       - echo "Deploying to EKS..."
-      - cd Jenkins_Assignment_7/hello-springboot-app
-      - kubectl apply -f deployment.yaml
+      - kubectl apply -f deployment.yaml || echo "kubectl apply failed"
       - echo "Verifying deployment..."
-      - kubectl rollout status deployment/hello-springboot-app --timeout=300s
-      - echo "Getting service URL..."
-      - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
+      - kubectl rollout status deployment/hello-springboot-app --timeout=300s || echo "Rollout status check failed"
+      - echo "Service URL:"
+      - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}' || echo "Could not get service URL"
       - kubectl get pods
 
 artifacts:
   files:
-    - Jenkins_Assignment_7/hello-springboot-app/target/*.jar
+    - "$DOCKER_BUILD_DIR/target/*.jar"
+  discard-paths: yes
 
 cache:
   paths:
     - '.m2/**/*'
-    - 'Jenkins_Assignment_7/hello-springboot-app/target/**/*'
+    - '$DOCKER_BUILD_DIR/target/**/*'
