--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -45,7 +45,7 @@ phases:
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
       - echo "Deploying to EKS..."
       - cd Jenkins_Assignment_7/hello-springboot-app
-      - kubectl apply -f deployment.yaml
+      - kubectl apply -f Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
       - echo "Verifying deployment..."
       - kubectl rollout status deployment/hello-springboot-app --timeout=300s
       - echo "Getting service URL..."
