--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -44,7 +44,7 @@ phases:
       - echo "Configuring kubectl..."
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
       - echo "Checking deployment.yaml contents..."
-      - cat Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
+      - cat deployment.yaml
       - echo "Deploying to EKS..."
       - kubectl apply -f Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
       - echo "Verifying deployment..."
