--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -46,7 +46,7 @@ phases:
       - echo "Checking deployment.yaml contents..."
       - cat deployment.yaml
       - echo "Deploying to EKS..."
-      - kubectl apply -f Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
+      - kubectl apply -f deployment.yaml
       - echo "Verifying deployment..."
       - kubectl rollout status deployment/hello-springboot-app --timeout=300s
       - echo "Getting service URL..."
