--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -42,7 +42,7 @@ phases:
       - echo "Pushing Docker image to ECR..."
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPOSITORY_NAME:latest
       - echo "Configuring kubectl..."
-      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
+      - aws eks update-kubeconfig --name wonderful-rock-potato --region us-east-1
       - echo "Checking deployment.yaml contents..."
       - cat deployment.yaml
       - echo "Deploying to EKS..."
