--- a/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
@@ -24,14 +24,13 @@ kind: Service
 metadata:
   name: hello-springboot-app-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: hello-springboot-app
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 8080
-      nodePort: 30500
 
 # old for jenkins and githubactions
 
