--- a/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/deployment.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,58 +15,22 @@ spec:
     spec:
       containers:
       - name: hello-springboot-app
-        image: 017373484103.dkr.ecr.us-east-1.amazonaws.com/hello-springboot-app:latest  # Full ECR path
-        imagePullPolicy: Always  # Always pull the latest image
+        image: hello-springboot-app:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
   name: hello-springboot-app-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: hello-springboot-app
   ports:
     - protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 8080
-
-# old for jenkins and githubactions
-
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: hello-springboot-app
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: hello-springboot-app
-#   template:
-#     metadata:
-#       labels:
-#         app: hello-springboot-app
-#     spec:
-#       containers:
-#       - name: hello-springboot-app
-#         image: hello-springboot-app:latest
-#         imagePullPolicy: Never
-#         ports:
-#         - containerPort: 8080
-# ---
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: hello-springboot-app-service
-# spec:
-#   type: NodePort
-#   selector:
-#     app: hello-springboot-app
-#   ports:
-#     - protocol: TCP
-#       port: 8080
-#       targetPort: 8080
-#       nodePort: 30500
+      nodePort: 30500
