--- a/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
+++ b/Jenkins_Assignment_7/hello-springboot-app/buildspec.yaml
@@ -72,10 +72,11 @@ phases:
       - kubectl get pods
       - echo "Getting service URL..."
       - kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
-      
-      - echo "Service URL: $(kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')"
-      # - echo "## Exporting Service URL ##"
-      - echo "SERVICE_URL=$(kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')" >> $CODEBUILD_VAR_FILE
+
+      - SERVICE_URL=$(kubectl get svc hello-springboot-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+      - echo "Service URL: $SERVICE_URL"
+      - echo "SERVICE_URL=$SERVICE_URL" >> buildenv.txt
+      - cat buildenv.txt
 
 artifacts:
   files:
